loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:3: error: value avance is not a member of Unit
  avance();avance();avance();avance();avance();avance();avance();avance();gauche();avance();avance();avance();avance();avance();avance();avance();avance();gauche();avance();avance();avance();avance();avance()avance();avance();avance();avance();gauche();avance();avance();avance();avance();avance();avance();avance();avance();gauche()
                                                                                                                                                                                                                ^